# Better-Brightness-No-PreLoader

./: CMakeLists.txt  README.md  xmake.lua
.github/workflows/: build.yml  release.yml
src/: main.cpp
